--- a/src/app/tab1/tab1.page.html
+++ b/src/app/tab1/tab1.page.html
@@ -10,7 +10,7 @@
 
 <ion-content>
 
-  <ion-grid *ngIf="targetCurrencyInfo ; else loading">
+  <ion-grid *ngIf="vsCurrencyInfo ; else loading">
     
     <br>
     <ion-row justify-content-center>
@@ -24,7 +24,6 @@
       </ion-col>
     </ion-row>
 
-    <br>
     <ion-row justify-content-center>
       <ion-col>
         <ion-item>
@@ -39,24 +38,28 @@
     <ion-row justify-content-center>
       <ion-col>
         <br>
-        <ion-img style="height: 100px;" src='{{targetCurrencyInfo.image}}'></ion-img>
+        <ion-img style="height: 80px;" src='{{vsCurrencyInfo.image}}'></ion-img>
       </ion-col>
     </ion-row>
 
     <ion-row justify-content-center>
       <ion-col>
         <div class="ion-text-center">
-          <h3>{{selectedCoinId.toUpperCase()}}: {{targetCurrencyInfo.current_price}} {{vsCurrency.toUpperCase()}} </h3>
-          <div *ngIf="targetCurrencyInfo.price_change_percentage_24h > 0">
+          <h4>{{selectedCoinId.toUpperCase()}}</h4>
+          <h5>{{vsCurrencyInfo.current_price}} {{vsCurrency.toUpperCase()}}</h5>
+          <br>
+          <div *ngIf="vsCurrencyInfo.price_change_percentage_24h > 0">
             <ion-icon color="success" name="arrow-up-circle"></ion-icon>
-            <h6 class="success">Up by {{targetCurrencyInfo.price_change_percentage_24h}}% (last 24 Hours)</h6>
+            <h6 class="success">Up by {{vsCurrencyInfo.price_change_percentage_24h}}% (<small>last 24 Hours</small>)</h6>
           </div>
-          <div *ngIf="targetCurrencyInfo.price_change_percentage_24h <= 0">
+          <div *ngIf="vsCurrencyInfo.price_change_percentage_24h <= 0">
             <ion-icon color="danger" name="arrow-down-circle"></ion-icon>
-            <h6 color="danger">{{targetCurrencyInfo.price_change_percentage_24h}}% </h6>
+            <h6 color="danger">{{vsCurrencyInfo.price_change_percentage_24h}}% </h6>
           </div>
+          <br>
           <div>
-            <h6>The current circulating supply is {{targetCurrencyInfo.circulating_supply}} coin.</h6>
+            <h6>Current Circulating supply</h6>
+            <h5>{{vsCurrencyInfo.circulating_supply}} coin</h5>
           </div>
         </div>
       </ion-col>
