--- a/src/app/tab1/tab1.page.html
+++ b/src/app/tab1/tab1.page.html
@@ -10,9 +10,10 @@
 
 <ion-content>
 
-  <ion-grid *ngIf="vsCurrencyInfo ; else loading">
-    
+  <ion-grid *ngIf="vsCurrencyInfo">
+
     <br>
+
     <ion-row justify-content-center>
       <ion-col>
         <ion-item>
@@ -72,7 +73,6 @@
         </ion-button>
       </ion-col>
     </ion-row>
-
 
   </ion-grid>
 
