fixing some design

--- a/src/app/tab1/tab1.page.html
+++ b/src/app/tab1/tab1.page.html
@@ -13,13 +13,14 @@
   <ion-grid *ngIf="vsCurrencyInfo">
 
     <br>
-
     <ion-row justify-content-center>
       <ion-col>
         <ion-item>
           <ion-label>Coin Id : </ion-label>
           <ion-select [(ngModel)]="selectedCoinId" (ionChange)="callCoingeckoService()">
-            <ion-select-option *ngFor="let coinId of coinsIds" value="{{coinId}}">{{coinId.toUpperCase()}}</ion-select-option>
+            <ion-select-option *ngFor="let coinId of coinsIds" value="{{coinId}}">
+              {{coinId.toUpperCase()}}
+            </ion-select-option>
           </ion-select>
         </ion-item>
       </ion-col>
@@ -30,7 +31,9 @@
         <ion-item>
           <ion-label>VS Currency : </ion-label>
           <ion-select [(ngModel)]="vsCurrency" (ionChange)="callCoingeckoService()">
-            <ion-select-option *ngFor="let currency of currencies" value="{{currency}}">{{currency.toUpperCase()}}</ion-select-option>
+            <ion-select-option *ngFor="let currency of currencies" value="{{currency}}">
+              {{currency.toUpperCase()}}
+            </ion-select-option>
           </ion-select>
         </ion-item>
       </ion-col>
@@ -39,28 +42,36 @@
     <ion-row justify-content-center>
       <ion-col>
         <br>
-        <ion-img style="height: 80px;" src='{{vsCurrencyInfo.image}}'></ion-img>
+        <ion-img style="height: 60px;" src='{{vsCurrencyInfo.image}}'></ion-img>
       </ion-col>
     </ion-row>
 
     <ion-row justify-content-center>
       <ion-col>
         <div class="ion-text-center">
-          <h4>{{selectedCoinId.toUpperCase()}}</h4>
-          <h5>{{vsCurrencyInfo.current_price}} {{vsCurrency.toUpperCase()}}</h5>
+          <div>
+            <ion-text color="dark"><strong>1 {{selectedCoinId.toUpperCase()}}</strong></ion-text><br>
+            <ion-text color="primary">{{vsCurrencyInfo.current_price}} {{vsCurrency.toUpperCase()}}</ion-text>
+          </div>
           <br>
           <div *ngIf="vsCurrencyInfo.price_change_percentage_24h > 0">
             <ion-icon color="success" name="arrow-up-circle"></ion-icon>
-            <h6 class="success">Up by {{vsCurrencyInfo.price_change_percentage_24h}}% (<small>last 24 Hours</small>)</h6>
+            <ion-text color="success">
+              Up by {{vsCurrencyInfo.price_change_percentage_24h}}%
+            </ion-text><br>
+            <ion-text><small>(last 24 Hours)</small></ion-text>
           </div>
           <div *ngIf="vsCurrencyInfo.price_change_percentage_24h <= 0">
             <ion-icon color="danger" name="arrow-down-circle"></ion-icon>
-            <h6 color="danger">{{vsCurrencyInfo.price_change_percentage_24h}}% </h6>
+            <ion-text color="danger">
+              Down by {{vsCurrencyInfo.price_change_percentage_24h}}%
+            </ion-text><br>
+            <ion-text><small>(last 24 Hours)</small></ion-text>
           </div>
           <br>
           <div>
-            <h6>Current Circulating supply</h6>
-            <h5>{{vsCurrencyInfo.circulating_supply}} coin</h5>
+            <ion-text><small>Current Circulating supply</small></ion-text><br>
+            <ion-text>{{vsCurrencyInfo.circulating_supply}}</ion-text><br>
           </div>
         </div>
       </ion-col>
@@ -69,7 +80,7 @@
     <ion-row justify-content-center class="ion-mergin-vertical">
       <ion-col class="ion-text-center">
         <ion-button fill="outline" color="secondary" shape="round" (click)="callCoingeckoService()">
-          <ion-icon slot="icon-only" name="refresh"></ion-icon>Refresh
+          <ion-icon slot="start" name="refresh"></ion-icon>Refresh
         </ion-button>
       </ion-col>
     </ion-row>
